# Study_Project_Code

./: .gitignore  pyproject.toml  requirements.txt
archive/: local_experiment.py
experiments/results/: context_size_metrics_table.csv
experiments/tabpfn_vs_distnet/results/: context_size_metrics_table.csv
helper/: distnet_helpers.py  distnet_lognormal.py  load_data.py  pfn_helpers.py  scalers.py
helper/tabpfn_vs_distnet_helpers/: data_source_release.py  distnet_helpers.py  distnet_lognormal.py  preprocess.py  scalers.py  tabpfn_helpers.py
notebooks/: distnet_table4.ipynb  experiment_context_size.ipynb  experiment_feature_dropping.ipynb  experiment_full_instances.ipynb  experiment_qualitative.ipynb  experiment_random_subsample.ipynb  experiment_scaler_effect.ipynb  experiment_tabpfn_heatmap.ipynb  fitted_distributions.ipynb  new_baselines.ipynb  tabpfn_scaler_effect  wilcoxon_signed_rank_test.ipynb
notebooks/results_processing/: reproduce_table_4.ipynb  visualize_experiment_1.ipynb  visualize_phase1.ipynb  visualize_phase2.ipynb
notebooks/tabpfn_vs_distnet/: context_sizes.ipynb  distnet_table4.ipynb  experiment_context_size.ipynb  feature_dropping.ipynb
results/csv/: distnet_results_with_early_stopping.csv  distnet_results_without_early_stopping.csv
results/experiment_context_sizes/: best_context_size_values.csv  best_context_sizes.csv  context_size_metrics_table.csv
results/plots/: scenario_clasp_factoring_table.csv  scenario_lpg-zeno_table.csv  scenario_saps-CVVAR_table.csv  scenario_spear_qcp_table.csv  scenario_spear_swgcp_table.csv  scenario_yalsat_qcp_table.csv  scenario_yalsat_swgcp_table.csv
results/results_figures/feature_dropping/: all_scenarios_summary.csv  clasp_factoring_results.csv  lpg-zeno_results.csv  saps-CVVAR_results.csv  spear_qcp_results.csv  spear_swgcp_results.csv  yalsat_qcp_results.csv  yalsat_swgcp_results.csv
scripts/local_experiments_scripts/: run_tabpfn_experiments_local.py
source/: experiment_1.py  tabpfn_vs_distnet.py
src/tabpfn_project/: experiment_config.py  globals.py  paths.py
src/tabpfn_project/helper/: bayesian_distnet.py  calculate_dist_metrics.py  calculate_metrics.py  data_source_release.py  dist_helper.py  distnet_helpers.py  distnet_lognormal.py  globals.py  load_data.py  naive_baseline.py  naive_baselines.py  oracles.py  utils.py  (+7 more)
(+5 files in other folders)
